[package]
name = "whatin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
grass = "0.13.2"
ignore = "0.4.22"
log = { version = "0.4.21", features = ["release_max_level_off"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
spinners = "4.1.1"
